Added init_ucs.h documentation

--- a/Documentation/latex/refman.tex
+++ b/Documentation/latex/refman.tex
@@ -144,6 +144,8 @@
 \input{md__r_e_a_d_m_e}
 \chapter{Module Index}
 \input{modules}
+\chapter{File Index}
+\input{files}
 \chapter{Module Documentation}
 \input{group__adc10__a__api}
 \include{group__adc12__a__api}
@@ -185,6 +187,8 @@
 \include{group__usci__b__i2c__api}
 \include{group__usci__b__spi__api}
 \include{group__wdt__a__api}
+\chapter{File Documentation}
+\input{init__ucs_8h}
 %--- End generated contents ---
 
 % Index
