Adding main.c documentation along with init_ucs.c.

--- a/Documentation/latex/refman.tex
+++ b/Documentation/latex/refman.tex
@@ -188,7 +188,9 @@
 \include{group__usci__b__spi__api}
 \include{group__wdt__a__api}
 \chapter{File Documentation}
+\input{init__ucs_8c}
 \input{init__ucs_8h}
+\input{main_8c}
 %--- End generated contents ---
 
 % Index
