--- a/Documentation/latex/files.tex
+++ b/Documentation/latex/files.tex
@@ -1,5 +1,6 @@
 \section{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{\mbox{\hyperlink{main_8c}{main.\+c}} \\*This source file contains the main functionality of the program }{\pageref{main_8c}}{}
 \item\contentsline{section}{driverlib/\+M\+S\+P430\+F5xx\+\_\+6xx/{\bfseries adc10\+\_\+a.\+h} }{\pageref{adc10__a_8h}}{}
 \item\contentsline{section}{driverlib/\+M\+S\+P430\+F5xx\+\_\+6xx/{\bfseries adc12\+\_\+a.\+h} }{\pageref{adc12__a_8h}}{}
 \item\contentsline{section}{driverlib/\+M\+S\+P430\+F5xx\+\_\+6xx/{\bfseries aes.\+h} }{\pageref{aes_8h}}{}
@@ -43,5 +44,6 @@ Here is a list of all documented files with brief descriptions\+:\begin{DoxyComp
 \item\contentsline{section}{driverlib/\+M\+S\+P430\+F5xx\+\_\+6xx/{\bfseries wdt\+\_\+a.\+h} }{\pageref{wdt__a_8h}}{}
 \item\contentsline{section}{driverlib/\+M\+S\+P430\+F5xx\+\_\+6xx/inc/{\bfseries hw\+\_\+memmap.\+h} }{\pageref{hw__memmap_8h}}{}
 \item\contentsline{section}{driverlib/\+M\+S\+P430\+F5xx\+\_\+6xx/inc/{\bfseries version.\+h} }{\pageref{version_8h}}{}
+\item\contentsline{section}{initializations/\mbox{\hyperlink{init__ucs_8c}{init\+\_\+ucs.\+c}} \\*This header file contains all the required high level functions used to initialize the Unified Clock System (U\+CS) of the C\+C430 }{\pageref{init__ucs_8c}}{}
 \item\contentsline{section}{initializations/\mbox{\hyperlink{init__ucs_8h}{init\+\_\+ucs.\+h}} \\*This header file contains all the required high level functions used to initialize the Unified Clock System (U\+CS) of the C\+C430 }{\pageref{init__ucs_8h}}{}
 \end{DoxyCompactList}
